<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        android:contentDescription="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_dashboard"
        android:title="@string/title_dashboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calendar"
        android:title="@string/title_calendar"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
